# mcp-medtric-booking

./: .env.example  README.md  my_server.py  pyproject.toml  service_api.py
mock_service_api/: README.md  pyproject.toml  requirements.txt
mock_service_api/app/: __init__.py  main.py
