[project]
name = "fastmcp-server"
version = "0.1.0"
description = "FastMCP quickstart server"
requires-python = ">=3.10"
dependencies = [
    "fastmcp==2.12.3",
    "httpx>=0.28.1",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["my_server", "service_api"]
